--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-player": "^3.4.0",
     "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
